chore(client,server): Dockerfile 전체 수정 및 이미지 빌드 최적화